--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header id="header">
         <h1>Portfolio</h1>
+        <h1>hasham Saleem</h1>
     </header>
     <hr>
     <h1>hash</h1>
