--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h1>hash</h1>
         <aside id="box">
             <ul type="box" id="Options">
+                <h1>hasham saleem</h1>
             <li><a href="#Aim">Aim</a></li>
             <li><a href="#QUA">Qualification</a></li>
             <li><a href="#SKI">Skills</a</li>
@@ -44,6 +45,7 @@
         </section> 
             <section>
                 <div class="All">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque atque beatae, placeat ex, magni dolor quam animi reprehenderit, nihil suscipit aut nisi nesciunt modi labore sequi soluta doloremque aliquam ab.</p>
                         <h2>Qualification</h2>
                         <ul class="Bullets" id="QUA">
                             <li >SSC From KPS</li>
